--- a/1.Graph_Creation.ipynb
+++ b/1.Graph_Creation.ipynb
@@ -29,6 +29,8 @@
     "\n",
     "`Graph(n_vertices, edges)` is the call to the constructor.\n",
     "\n",
+    "To specify a directed or undirected graph simply pass `directed=True` to the constructor. (default is `False`)\n",
+    "\n",
     "There is also a build in function to plot a graph: `plot(graph_name)`.\n",
     "\n",
     "As we specify vertexes and edges we can use `Integers` o `Strings` as node ids.\n",
@@ -41,15 +43,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-11T08:02:43.318488Z",
-     "start_time": "2024-04-11T08:02:43.309358Z"
+     "end_time": "2024-04-11T08:16:14.177924Z",
+     "start_time": "2024-04-11T08:16:14.165960Z"
     }
    },
    "cell_type": "code",
    "source": [
     "#Creating a Star like graph using Integers\n",
     "edges = [(0, 1), (0, 2), (0, 3), (0, 4)]\n",
-    "int_graph = ig.Graph(edges)\n",
+    "int_graph = ig.Graph(edges,directed=True)\n",
     "ig.plot(int_graph)"
    ],
    "id": "f1371d5a656bd360",
@@ -57,11 +59,11 @@
     {
      "data": {
       "text/plain": [
-       "<igraph.drawing.cairo.plot.CairoPlot at 0x765c95f40510>"
+       "<igraph.drawing.cairo.plot.CairoPlot at 0x765ca8322890>"
       ],
-      "image/svg+xml": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"600\" height=\"600\" viewBox=\"0 0 600 600\">\n<rect x=\"-60\" y=\"-60\" width=\"720\" height=\"720\" fill=\"rgb(100%, 100%, 100%)\" fill-opacity=\"1\"/>\n<path fill=\"none\" stroke-width=\"1\" stroke-linecap=\"butt\" stroke-linejoin=\"miter\" stroke=\"rgb(26.666667%, 26.666667%, 26.666667%)\" stroke-opacity=\"1\" stroke-miterlimit=\"10\" d=\"M 300 300 L 505.515625 580 \"/>\n<path fill=\"none\" stroke-width=\"1\" stroke-linecap=\"butt\" stroke-linejoin=\"miter\" stroke=\"rgb(26.666667%, 26.666667%, 26.666667%)\" stroke-opacity=\"1\" stroke-miterlimit=\"10\" d=\"M 300 300 L 20 505.515625 \"/>\n<path fill=\"none\" stroke-width=\"1\" stroke-linecap=\"butt\" stroke-linejoin=\"miter\" stroke=\"rgb(26.666667%, 26.666667%, 26.666667%)\" stroke-opacity=\"1\" stroke-miterlimit=\"10\" d=\"M 300 300 L 94.484375 20 \"/>\n<path fill=\"none\" stroke-width=\"1\" stroke-linecap=\"butt\" stroke-linejoin=\"miter\" stroke=\"rgb(26.666667%, 26.666667%, 26.666667%)\" stroke-opacity=\"1\" stroke-miterlimit=\"10\" d=\"M 300 300 L 580 94.484375 \"/>\n<path fill-rule=\"nonzero\" fill=\"rgb(100%, 0%, 0%)\" fill-opacity=\"1\" stroke-width=\"1\" stroke-linecap=\"butt\" stroke-linejoin=\"miter\" stroke=\"rgb(0%, 0%, 0%)\" stroke-opacity=\"1\" stroke-miterlimit=\"10\" d=\"M 310 300 C 310 305.523438 305.523438 310 300 310 C 294.476562 310 290 305.523438 290 300 C 290 294.476562 294.476562 290 300 290 C 305.523438 290 310 294.476562 310 300 \"/>\n<path fill-rule=\"nonzero\" fill=\"rgb(100%, 0%, 0%)\" fill-opacity=\"1\" stroke-width=\"1\" stroke-linecap=\"butt\" stroke-linejoin=\"miter\" stroke=\"rgb(0%, 0%, 0%)\" stroke-opacity=\"1\" stroke-miterlimit=\"10\" d=\"M 515.515625 580 C 515.515625 585.523438 511.039062 590 505.515625 590 C 499.992188 590 495.515625 585.523438 495.515625 580 C 495.515625 574.476562 499.992188 570 505.515625 570 C 511.039062 570 515.515625 574.476562 515.515625 580 \"/>\n<path fill-rule=\"nonzero\" fill=\"rgb(100%, 0%, 0%)\" fill-opacity=\"1\" stroke-width=\"1\" stroke-linecap=\"butt\" stroke-linejoin=\"miter\" stroke=\"rgb(0%, 0%, 0%)\" stroke-opacity=\"1\" stroke-miterlimit=\"10\" d=\"M 30 505.515625 C 30 511.039062 25.523438 515.515625 20 515.515625 C 14.476562 515.515625 10 511.039062 10 505.515625 C 10 499.992188 14.476562 495.515625 20 495.515625 C 25.523438 495.515625 30 499.992188 30 505.515625 \"/>\n<path fill-rule=\"nonzero\" fill=\"rgb(100%, 0%, 0%)\" fill-opacity=\"1\" stroke-width=\"1\" stroke-linecap=\"butt\" stroke-linejoin=\"miter\" stroke=\"rgb(0%, 0%, 0%)\" stroke-opacity=\"1\" stroke-miterlimit=\"10\" d=\"M 104.484375 20 C 104.484375 25.523438 100.007812 30 94.484375 30 C 88.960938 30 84.484375 25.523438 84.484375 20 C 84.484375 14.476562 88.960938 10 94.484375 10 C 100.007812 10 104.484375 14.476562 104.484375 20 \"/>\n<path fill-rule=\"nonzero\" fill=\"rgb(100%, 0%, 0%)\" fill-opacity=\"1\" stroke-width=\"1\" stroke-linecap=\"butt\" stroke-linejoin=\"miter\" stroke=\"rgb(0%, 0%, 0%)\" stroke-opacity=\"1\" stroke-miterlimit=\"10\" d=\"M 590 94.484375 C 590 100.007812 585.523438 104.484375 580 104.484375 C 574.476562 104.484375 570 100.007812 570 94.484375 C 570 88.960938 574.476562 84.484375 580 84.484375 C 585.523438 84.484375 590 88.960938 590 94.484375 \"/>\n</svg>\n"
+      "image/svg+xml": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"600\" height=\"600\" viewBox=\"0 0 600 600\">\n<rect x=\"-60\" y=\"-60\" width=\"720\" height=\"720\" fill=\"rgb(100%, 100%, 100%)\" fill-opacity=\"1\"/>\n<path fill=\"none\" stroke-width=\"1\" stroke-linecap=\"butt\" stroke-linejoin=\"miter\" stroke=\"rgb(26.666667%, 26.666667%, 26.666667%)\" stroke-opacity=\"1\" stroke-miterlimit=\"10\" d=\"M 300.019531 299.871094 L 40.492188 464.410156 \"/>\n<path fill-rule=\"nonzero\" fill=\"rgb(26.666667%, 26.666667%, 26.666667%)\" fill-opacity=\"1\" d=\"M 28.445312 472.050781 L 38.011719 460.496094 L 42.976562 468.324219 L 28.445312 472.050781 \"/>\n<path fill=\"none\" stroke-width=\"1\" stroke-linecap=\"butt\" stroke-linejoin=\"miter\" stroke=\"rgb(26.666667%, 26.666667%, 26.666667%)\" stroke-opacity=\"1\" stroke-miterlimit=\"10\" d=\"M 300.019531 299.871094 L 464.429688 559.5 \"/>\n<path fill-rule=\"nonzero\" fill=\"rgb(26.666667%, 26.666667%, 26.666667%)\" fill-opacity=\"1\" d=\"M 472.0625 571.550781 L 460.515625 561.980469 L 468.347656 557.019531 L 472.0625 571.550781 \"/>\n<path fill=\"none\" stroke-width=\"1\" stroke-linecap=\"butt\" stroke-linejoin=\"miter\" stroke=\"rgb(26.666667%, 26.666667%, 26.666667%)\" stroke-opacity=\"1\" stroke-miterlimit=\"10\" d=\"M 300.019531 299.871094 L 135.640625 40.496094 \"/>\n<path fill-rule=\"nonzero\" fill=\"rgb(26.666667%, 26.666667%, 26.666667%)\" fill-opacity=\"1\" d=\"M 128.003906 28.445312 L 139.554688 38.015625 L 131.726562 42.976562 L 128.003906 28.445312 \"/>\n<path fill=\"none\" stroke-width=\"1\" stroke-linecap=\"butt\" stroke-linejoin=\"miter\" stroke=\"rgb(26.666667%, 26.666667%, 26.666667%)\" stroke-opacity=\"1\" stroke-miterlimit=\"10\" d=\"M 300.019531 299.871094 L 559.496094 135.664062 \"/>\n<path fill-rule=\"nonzero\" fill=\"rgb(26.666667%, 26.666667%, 26.666667%)\" fill-opacity=\"1\" d=\"M 571.550781 128.035156 L 561.972656 139.578125 L 557.015625 131.746094 L 571.550781 128.035156 \"/>\n<path fill-rule=\"nonzero\" fill=\"rgb(100%, 0%, 0%)\" fill-opacity=\"1\" stroke-width=\"1\" stroke-linecap=\"butt\" stroke-linejoin=\"miter\" stroke=\"rgb(0%, 0%, 0%)\" stroke-opacity=\"1\" stroke-miterlimit=\"10\" d=\"M 310.019531 299.871094 C 310.019531 305.394531 305.542969 309.871094 300.019531 309.871094 C 294.496094 309.871094 290.019531 305.394531 290.019531 299.871094 C 290.019531 294.347656 294.496094 289.871094 300.019531 289.871094 C 305.542969 289.871094 310.019531 294.347656 310.019531 299.871094 \"/>\n<path fill-rule=\"nonzero\" fill=\"rgb(100%, 0%, 0%)\" fill-opacity=\"1\" stroke-width=\"1\" stroke-linecap=\"butt\" stroke-linejoin=\"miter\" stroke=\"rgb(0%, 0%, 0%)\" stroke-opacity=\"1\" stroke-miterlimit=\"10\" d=\"M 30 477.40625 C 30 482.925781 25.523438 487.40625 20 487.40625 C 14.476562 487.40625 10 482.925781 10 477.40625 C 10 471.882812 14.476562 467.40625 20 467.40625 C 25.523438 467.40625 30 471.882812 30 477.40625 \"/>\n<path fill-rule=\"nonzero\" fill=\"rgb(100%, 0%, 0%)\" fill-opacity=\"1\" stroke-width=\"1\" stroke-linecap=\"butt\" stroke-linejoin=\"miter\" stroke=\"rgb(0%, 0%, 0%)\" stroke-opacity=\"1\" stroke-miterlimit=\"10\" d=\"M 487.414062 580 C 487.414062 585.523438 482.9375 590 477.414062 590 C 471.890625 590 467.414062 585.523438 467.414062 580 C 467.414062 574.476562 471.890625 570 477.414062 570 C 482.9375 570 487.414062 574.476562 487.414062 580 \"/>\n<path fill-rule=\"nonzero\" fill=\"rgb(100%, 0%, 0%)\" fill-opacity=\"1\" stroke-width=\"1\" stroke-linecap=\"butt\" stroke-linejoin=\"miter\" stroke=\"rgb(0%, 0%, 0%)\" stroke-opacity=\"1\" stroke-miterlimit=\"10\" d=\"M 132.648438 20 C 132.648438 25.523438 128.171875 30 122.648438 30 C 117.128906 30 112.648438 25.523438 112.648438 20 C 112.648438 14.476562 117.128906 10 122.648438 10 C 128.171875 10 132.648438 14.476562 132.648438 20 \"/>\n<path fill-rule=\"nonzero\" fill=\"rgb(100%, 0%, 0%)\" fill-opacity=\"1\" stroke-width=\"1\" stroke-linecap=\"butt\" stroke-linejoin=\"miter\" stroke=\"rgb(0%, 0%, 0%)\" stroke-opacity=\"1\" stroke-miterlimit=\"10\" d=\"M 590 122.6875 C 590 128.207031 585.523438 132.6875 580 132.6875 C 574.476562 132.6875 570 128.207031 570 122.6875 C 570 117.164062 574.476562 112.6875 580 112.6875 C 585.523438 112.6875 590 117.164062 590 122.6875 \"/>\n</svg>\n"
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {
       "image/svg+xml": {
        "isolated": true
@@ -70,7 +72,7 @@
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 2
+   "execution_count": 7
   },
   {
    "metadata": {},
