Refactored the position of Notebooks
Updated readme and path to keep stuff working

Signed-off-by: Christian Mancini <mancinichristian00@gmail.com>

--- a/NoteBooks/2.ImportingAndExporting.ipynb
+++ b/NoteBooks/2.ImportingAndExporting.ipynb
@@ -15,8 +15,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-12T13:46:29.496236Z",
-     "start_time": "2024-04-12T13:46:29.066461Z"
+     "end_time": "2024-04-12T13:59:18.952788Z",
+     "start_time": "2024-04-12T13:59:18.522793Z"
     }
    },
    "cell_type": "code",
@@ -25,7 +25,7 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "\n",
-    "membership = pd.read_csv(\"Data/club_membership\",skiprows=1,delimiter=\" \")\n",
+    "membership = pd.read_csv(\"../Data/club_membership\",skiprows=1,delimiter=\" \")\n",
     "membership.head()"
    ],
    "id": "42a4530547a4a999",
@@ -137,8 +137,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-12T13:46:29.502122Z",
-     "start_time": "2024-04-12T13:46:29.497197Z"
+     "end_time": "2024-04-12T13:59:18.959114Z",
+     "start_time": "2024-04-12T13:59:18.953680Z"
     }
    },
    "cell_type": "code",
@@ -250,8 +250,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-12T13:46:29.511412Z",
-     "start_time": "2024-04-12T13:46:29.502654Z"
+     "end_time": "2024-04-12T13:59:18.968104Z",
+     "start_time": "2024-04-12T13:59:18.959728Z"
     }
    },
    "cell_type": "code",
@@ -279,9 +279,9 @@
      "output_type": "stream",
      "text": [
       "The Graph is Bipartite\n",
-      "First vertices:[igraph.Vertex(<igraph.Graph object at 0x728b9955a750>, 0, {'name': 'member_1', 'type': 1}), igraph.Vertex(<igraph.Graph object at 0x728b9955a750>, 1, {'name': 'member_2', 'type': 1})]\n",
+      "First vertices:[igraph.Vertex(<igraph.Graph object at 0x79256d536750>, 0, {'name': 'member_1', 'type': 1}), igraph.Vertex(<igraph.Graph object at 0x79256d536750>, 1, {'name': 'member_2', 'type': 1})]\n",
       "\n",
-      "Last vertices:[igraph.Vertex(<igraph.Graph object at 0x728b9955a750>, 38, {'name': 'club_14', 'type': 0}), igraph.Vertex(<igraph.Graph object at 0x728b9955a750>, 39, {'name': 'club_15', 'type': 0})]\n",
+      "Last vertices:[igraph.Vertex(<igraph.Graph object at 0x79256d536750>, 38, {'name': 'club_14', 'type': 0}), igraph.Vertex(<igraph.Graph object at 0x79256d536750>, 39, {'name': 'club_15', 'type': 0})]\n",
       "\n"
      ]
     }
@@ -291,8 +291,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-12T13:46:29.892947Z",
-     "start_time": "2024-04-12T13:46:29.512160Z"
+     "end_time": "2024-04-12T13:59:19.333174Z",
+     "start_time": "2024-04-12T13:59:18.968861Z"
     }
    },
    "cell_type": "code",
@@ -342,17 +342,25 @@
    "id": "b45657896b3537c7"
   },
   {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "from os import mkdir, stat\n",
+    "export_path = \"../Exported_Graphs\""
+   ],
+   "id": "cf50fe185c55fade",
+   "outputs": [],
+   "execution_count": 5
+  },
+  {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-12T13:46:30.306009Z",
-     "start_time": "2024-04-12T13:46:29.893544Z"
+     "end_time": "2024-04-12T13:59:19.714128Z",
+     "start_time": "2024-04-12T13:59:19.336061Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "from os import mkdir, stat\n",
-    "export_path = \"Exported_Graphs\"\n",
-    "\n",
     "try:\n",
     "    mkdir(export_path)\n",
     "except FileExistsError: pass\n",
@@ -371,7 +379,7 @@
     ")\n",
     "plt.show()"
    ],
-   "id": "cf50fe185c55fade",
+   "id": "13045d08a6c0df55",
    "outputs": [
     {
      "data": {
@@ -384,19 +392,17 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 5
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-12T13:46:30.699680Z",
-     "start_time": "2024-04-12T13:46:30.306734Z"
+     "end_time": "2024-04-12T13:59:20.075272Z",
+     "start_time": "2024-04-12T13:59:19.715493Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "export_path = \"Exported_Graphs\"\n",
-    "\n",
     "try:\n",
     "    mkdir(export_path)\n",
     "except FileExistsError: pass\n",
@@ -428,7 +434,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 6
+   "execution_count": 7
   },
   {
    "metadata": {},
@@ -444,14 +450,12 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-12T13:46:31.033953Z",
-     "start_time": "2024-04-12T13:46:30.700374Z"
+     "end_time": "2024-04-12T13:59:20.468489Z",
+     "start_time": "2024-04-12T13:59:20.076161Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "export_path = \"Exported_Graphs\"\n",
-    "\n",
     "try:\n",
     "    mkdir(export_path)\n",
     "except FileExistsError: pass\n",
@@ -483,7 +487,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 7
+   "execution_count": 8
   },
   {
    "metadata": {},
@@ -494,14 +498,14 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-12T13:46:31.036784Z",
-     "start_time": "2024-04-12T13:46:31.034526Z"
+     "end_time": "2024-04-12T13:59:20.471387Z",
+     "start_time": "2024-04-12T13:59:20.469294Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "compressed = stat(\"Exported_Graphs/membership_zipped.graphml\").st_size\n",
-    "not_compressed = stat(\"Exported_Graphs/membership.graphml\").st_size\n",
+    "compressed = stat(\"../Exported_Graphs/membership_zipped.graphml\").st_size\n",
+    "not_compressed = stat(\"../Exported_Graphs/membership.graphml\").st_size\n",
     "\n",
     "print(f\"Compressed version is {(not_compressed / compressed):.2f} times smaller.\")\n"
    ],
@@ -515,7 +519,7 @@
      ]
     }
    ],
-   "execution_count": 8
+   "execution_count": 9
   }
  ],
  "metadata": {
